# solidity

./: CMakeLists.txt  Changelog.md
.circleci/: config.yml
cmake/: EthCompilerSettings.cmake
docs/: ast.rst  bugs_by_version.json  contributing.rst  units-and-global-variables.rst  using-the-compiler.rst
docs/contributing/: tests-list.csv
libdevcore/: CommonData.cpp  FixedHash.h
libevmasm/: Assembly.cpp  ExpressionClasses.h  GasMeter.cpp  KnownState.cpp  KnownState.h  RuleList.h  SimplificationRule.h  SimplificationRules.h
liblangutil/: Scanner.cpp  Token.h
liblll/: CodeFragment.cpp
libsolidity/analysis/: ContractLevelChecker.cpp  ContractLevelChecker.h  ControlFlowAnalyzer.cpp  DeclarationContainer.cpp  NameAndTypeResolver.cpp  OverrideChecker.cpp  OverrideChecker.h  PostTypeChecker.cpp  PostTypeChecker.h  ReferencesResolver.cpp  ReferencesResolver.h  TypeChecker.cpp  TypeChecker.h  ViewPureChecker.cpp
libsolidity/ast/: AST.cpp  AST.h  ASTAnnotations.h  ASTForward.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTUtils.h  ASTVisitor.h  Types.h  (+2 more)
libyul/: AsmAnalysis.cpp  AsmAnalysis.h  AsmParser.cpp  AsmPrinter.cpp  AsmPrinter.h  AssemblyStack.cpp  AssemblyStack.h  CMakeLists.txt  CompilabilityChecker.cpp  Dialect.cpp  Dialect.h  Object.cpp
scripts/: tests.sh
solc/: CommandLineInterface.cpp
test/: CMakeLists.txt  solcjsTests.sh
tools/: CMakeLists.txt
tools/solidity_upgrade/: SourceTransform.h  SourceUpgrade.cpp  SourceUpgrade.h  Upgrade050.cpp  Upgrade050.h  Upgrade060.cpp  Upgrade060.h  UpgradeChange.cpp  UpgradeChange.h  UpgradeSuite.h  main.cpp
(+112 files in other folders)
